--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,13 +3,39 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-        font-family: "Inter", sans-serif;
+    * {
+        /* font-family: "Inter", sans-serif !important; */
+        @apply font-inter;
     }
 
-    h1,h2,h3,h4,h5,h6 {
-        font-family: "Aeonik", system-ui, sans-serif !important;
+    table {
+        @apply align-top text-left min-w-full overflow-auto border-collapse divide-y table-fixed;
     }
+
+    tbody tr {
+        @apply hover:bg-[#F8F5FF] table-row
+    }
+
+    tbody {
+        @apply divide-y
+    }
+
+    th, td {
+        @apply p-3 text-sm text-[#6B7280] table-cell
+    }
+
+    th:first-child, td:first-child{
+        @apply pl-5
+    }
+
+    th:last-child, td:last-child{
+        @apply pr-5
+    }
+
+    th {
+        @apply font-medium
+    }
+
 }
 
 @layer components {
@@ -61,7 +87,7 @@
     }
 
     .card {
-        @apply md:p-5 p-4 rounded-[20px] border 
+        @apply p-4 rounded-lg bg-white border-2 border-gray-200
     }
 
     .shadow-main{
