--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -100,4 +100,12 @@
         box-shadow: 0px 0.59px 0.59px 0px rgba(0, 0, 0, 0.05);
         box-shadow: 0px 5.86px 18.74px 0px rgba(33, 33, 38, 0.15);
     }
+
+    .shadow-switch {
+        box-shadow: 0px 2px 4px 0px #0307120A;
+        box-shadow: 0px 0px 8px 0px #03071205 inset;
+        box-shadow: 0px 0px 0px 0.5px #0307120F inset;
+        box-shadow: 0px 2px 4px 0px #0307120A inset;
+        box-shadow: 0px 1px 1px 0px #0307120A inset;
+    }
 }
